--- a/css/main.css
+++ b/css/main.css
@@ -78,7 +78,7 @@ body {
 	z-index: -1;
 }
 
-.nav {
+.menu {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -93,6 +93,19 @@ body {
 .menu-list {
 	display: flex;
 	font-size: 13px;
+}
+
+.menu-item:not(:last-child) {
+	margin-right: 30px;
+}
+
+.menu-link {
+	color: inherit;
+	text-transform: uppercase;
+}
+
+.menu-link:hover {
+	text-decoration: underline;
 }
 
 #check-menu {
@@ -130,20 +143,6 @@ body {
 	top: -7px;
 }
 
-.menu-list
- li:not(:last-child) {
-	margin-right: 30px;
-}
-
-.menu-link {
-	color: inherit;
-	text-transform: uppercase;
-}
-
-.menu-link:hover {
-	text-decoration: underline;
-}
-
 .header-content {
 	padding: 106px 0 125px;
 	margin: 0 auto;
@@ -160,7 +159,7 @@ body {
 /*----------------------------------------------*/
 
 .trends {
-	padding: 57px 0 64px;
+	padding: 55px 0 58px;
 }
 
 .trends-container {
@@ -183,7 +182,7 @@ body {
 	background-color: #b59f5b;
 	opacity: 0.4;
 	display: block;
-	margin: 14px auto 0; 
+	margin: 10px auto 0; 
 }
 
 .big-title {
@@ -224,7 +223,7 @@ body {
 	margin-right: 4px;
 }
 
-.card-garden {
+.trends-garden {
 	background-image: url('../images/trend1.jpg');
 }
 
@@ -240,13 +239,24 @@ body {
 	background-image: url('../images/trend4.jpg');	
 }
 
+.trends-item {
+	position: absolute;
+	top: 0;
+  	left: 0;
+  	right: 0;
+  	bottom: 0;
+  	z-index: 1;
+}
+
 .trends-content {
 	width: 90%;
-	padding: 7%;
+	max-height: 90%;
+	padding: 8% 7%;
 	position: absolute;
 	bottom: 15px;
 	left: 5%;
 	border: 3px solid rgba(181, 159, 91, 0.6);
+	overflow: hidden;
 }
 
 .cathegory {
@@ -281,8 +291,12 @@ body {
 
 .trend-title a {
 	display: block;
-	max-width: 287px;
+	max-width: 300px;
 	margin-top: 10px;	
+}
+
+.trends-garden h3 {
+	max-width: 250px;
 }
 
 /*----------------------------------------------*/
@@ -293,7 +307,7 @@ body {
 }
 
 .post {
-	margin-bottom: 60px;
+	margin-bottom: 58px;
 	display: flex;
 	justify-content: center;
 }
@@ -305,7 +319,7 @@ body {
 .post-title a {
 	color: inherit;
 	display: inline-block;
-	margin: 12px 0 30px;
+	margin: 8px 0 24px;
 	width: 340px;
 }
 
@@ -330,6 +344,10 @@ body {
 	margin-top: 46px;
 }
 
+.description-text + p {
+    margin-top: 9px;
+}
+
 /*----------------------------------------------*/
 
 .sidebar {
@@ -337,7 +355,7 @@ body {
 }
 
 .latest-posts {
-	margin: 0 0 60px;
+	margin: 0 0 56px;
 }
 
 .new-posts {
@@ -347,7 +365,7 @@ body {
 .post-preview {
 	display: flex;
 	justify-content: flex-start;
-	margin-bottom: 22px;
+	margin-bottom: 17px;
 }
 
 .preview-img img {
@@ -371,7 +389,7 @@ body {
 	line-height: 18px;
 	color: #000;
 	transition: color .5s;
-	margin-top: 5px;
+	margin-top: 3px;
 }
 
 .preview-title a:hover {
@@ -395,6 +413,8 @@ body {
 	color: rgba(0, 0, 0, 0.54);
 	padding-left: 18px;
 	border: 1px solid transparent;
+	-webkit-appearance: none;
+	-moz-appearance: none;
 }
 
 .field:focus {
@@ -441,7 +461,7 @@ body {
 }
 
 .tags {
-	margin: 24px 0 57px;
+	margin: 24px 0 50px;
 	display: flex;
 	flex-wrap: wrap;
 }
@@ -451,8 +471,8 @@ body {
 	font-size: 12px;
 	font-weight: 700;
 	display: block;
-	padding: 6px 15px; 
-	margin: 0 5px 6px 0;
+	padding: 3px 15px 5px; 
+	margin: 0 5px 5px 0;
 	border: 3px solid #eee;
 	color: #0f0d0e;
 	transition: all .3s ease;
@@ -463,11 +483,11 @@ body {
 }
 
 .themes {
-	margin-top: 13px;  
+	margin-top: 11px;  
 }
 
 .theme-link {
-	padding: 14px 0;
+	padding: 11px 0;
 	border-bottom: 1px solid #eee;
 	font-size: 14px;
 	font-weight: 700;
@@ -490,6 +510,7 @@ body {
 /*----------------------------------------------*/
 
 .products-section {
+	margin-top: -5px;
 	padding-bottom: 64px;
 }
 
@@ -512,9 +533,9 @@ body {
 
 .card-body {
 	max-width: 348px;
-	height: 268px;
 	min-height: 221px;
-	padding: 50px 20px 0;
+	height: 268px;
+	padding: 44px 20px 0;
 	border: 3px solid rgba(181, 159, 91, 0.6);
 }
 
@@ -527,7 +548,12 @@ body {
 	font-size: 20px;
 	font-weight: 700;
 	text-transform: uppercase;
-	margin-bottom: 8px;
+	margin-bottom: 4px;
+}
+
+.product-description {
+	max-height: 110px;
+	overflow: hidden;
 }
 
 .product-link {
@@ -542,7 +568,7 @@ body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	margin-top: 23px;
+	margin-top: 25px;
 }
 
 .price {
@@ -562,7 +588,7 @@ body {
 }
 
 .product-btn {
-	padding: 17px 26px;
+	padding: 17px 26px 17px 32px;
 }
 
 /*----------------------------------------------*/
@@ -578,7 +604,7 @@ body {
 }
 
 .social-icons li {
-	padding: 30px 0;
+	padding: 26px 0;
 }
 
 .social-icons li:nth-child(n+2) {
@@ -611,7 +637,7 @@ body {
 
 .copyright {
 	text-align: center;
-	padding: 73px 0 40px;
+	padding: 70px 0 40px;
 }
 
 .copyright a {
@@ -655,9 +681,11 @@ body {
 	position: absolute;
 	top: -26px;
 	right: 0px;
+	background-color: transparent;
 	background-image: url('../svg/form-x.svg');
 	background-repeat: no-repeat;
 	background-position: center;
+	cursor: pointer;
 }
 
 .popup-form {
@@ -673,6 +701,7 @@ body {
 	font-size: 13px;
 	color: #000;
 	margin-bottom: 10px;
+	cursor: default;
 }
 
 .select {
@@ -687,8 +716,6 @@ body {
 	background-repeat: no-repeat;
 	background-position: center right 12px;
 	background-size: 10px;
-	-webkit-appearance: none;
-	-moz-appearance: none;
 }
 
 .radio {
