--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ body {
 	padding: 0 15px;
 }
 
- .visually-hidden {
+.visually-hidden {
 	position: absolute;
 	width: 1px;
 	height: 1px;
@@ -96,7 +96,7 @@ body {
 }
 
 .menu-item:not(:last-child) {
-	margin-right: 30px;
+	margin-right: 35px;
 }
 
 .menu-link {
@@ -144,7 +144,7 @@ body {
 }
 
 .header-content {
-	padding: 106px 0 125px;
+	padding: 105px 0 125px;
 	margin: 0 auto;
 	width: 690px;
 }
@@ -159,7 +159,7 @@ body {
 /*----------------------------------------------*/
 
 .trends {
-	padding: 55px 0 58px;
+	padding: 56px 0 58px;
 }
 
 .trends-container {
@@ -195,9 +195,11 @@ body {
 }
 
 .trends-card {
-	display: block;
 	width: 25%;
-	height: 320px;
+	padding: 15px 25px;
+	display: flex;
+	justify-content: center;
+	align-items: flex-end;
 	position: relative;
 	z-index: 0;
 	background-color: #000;
@@ -239,24 +241,10 @@ body {
 	background-image: url('../images/trend4.jpg');	
 }
 
-.trends-item {
-	position: absolute;
-	top: 0;
-  	left: 0;
-  	right: 0;
-  	bottom: 0;
-  	z-index: 1;
-}
-
 .trends-content {
-	width: 90%;
-	max-height: 90%;
+	width: 100%;
 	padding: 8% 7%;
-	position: absolute;
-	bottom: 15px;
-	left: 5%;
 	border: 3px solid rgba(181, 159, 91, 0.6);
-	overflow: hidden;
 }
 
 .cathegory {
@@ -307,13 +295,17 @@ body {
 }
 
 .post {
-	margin-bottom: 58px;
+	margin-bottom: 65px;
 	display: flex;
 	justify-content: center;
 }
 
+.post:not(:last-child) {
+	margin-bottom: 56px;
+}
+
 .post-img {
-	margin-right: 30px;
+	margin-right: 26px;
 }
 
 .post-title a {
@@ -355,7 +347,7 @@ body {
 }
 
 .latest-posts {
-	margin: 0 0 56px;
+	margin: 0 0 57px;
 }
 
 .new-posts {
@@ -365,14 +357,19 @@ body {
 .post-preview {
 	display: flex;
 	justify-content: flex-start;
-	margin-bottom: 17px;
+	align-items: flex-start;
+	margin-bottom: 18px;
 }
 
 .preview-img img {
 	width: 70px;
 	height: 70px;
-	margin-right: 17px;
+	margin-right: 25px;
 	background-color: #eff6f1;
+}
+
+.preview-content {
+	margin: -5px;
 }
 
 .preview-date {
@@ -389,7 +386,6 @@ body {
 	line-height: 18px;
 	color: #000;
 	transition: color .5s;
-	margin-top: 3px;
 }
 
 .preview-title a:hover {
@@ -399,7 +395,7 @@ body {
 .search {
 	display: flex;
 	flex-direction: row;
-	margin-bottom: 60px;
+	margin-bottom: 58px;
 }
 
 .search-field {
@@ -516,6 +512,7 @@ body {
 
 .products {
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 	margin-top: 28px;
 }
@@ -525,35 +522,29 @@ body {
 	flex-direction: column;
 	align-items: center;
 	position: relative;
+	width: 29.7%;
 }
 
 .card-img {
-	margin-bottom: -33px;
+	margin-bottom: -37px;
 }
 
 .card-body {
-	max-width: 348px;
-	min-height: 221px;
-	height: 268px;
-	padding: 44px 20px 0;
-	border: 3px solid rgba(181, 159, 91, 0.6);
-}
+ 	border: 3px solid rgba(181, 159, 91, 0.6);
+	padding: 49px 14px 28px 16px;
+ 	flex-grow: 1;
+ }
 
-.product-content {
+ .product-content {
 	font-size: 15px;
 	line-height: 22px;
 }
 
 .product-title {
-	font-size: 20px;
+	font-size: 1.25rem;
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 4px;
-}
-
-.product-description {
-	max-height: 110px;
-	overflow: hidden;
 }
 
 .product-link {
@@ -604,7 +595,7 @@ body {
 }
 
 .social-icons li {
-	padding: 26px 0;
+	padding: 30px 0;
 }
 
 .social-icons li:nth-child(n+2) {
@@ -637,7 +628,7 @@ body {
 
 .copyright {
 	text-align: center;
-	padding: 70px 0 40px;
+	padding: 65px 0 40px;
 }
 
 .copyright a {
