--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,12 +4,16 @@
 	}
 	.burger {
 		display: block;
+		margin: -11px 19px 0 0;
 	}
 	.header-content {
 		width: 85%;
 	}
 	.trends-list {
 		flex-wrap: wrap;
+	}
+	.trends-garden a {
+		max-width: 215px;
 	}
 	.post {
 		flex-direction: column;
@@ -38,8 +42,11 @@
 	.products {
 		flex-wrap: wrap;
 	}
+	.product-title {
+		font-size: 1.062rem;
+	}
 	.copyright {
-		padding-top: 49px;
+		padding-top: 39px;
 	}
 }
 
@@ -52,9 +59,10 @@
 	.logo img {
 		width: 158px;
 		height: 36px;
+		margin: -2px 0 0 20px;
 	}
 	.header-content {
-		padding: 82px 0 115px;
+		padding: 82px 0 114px;
 	}
 	.header-title {
 		font-size: 2.5rem;
@@ -77,25 +85,36 @@
 	}
 	.trends-card {
 		width: calc(50% - 4px);
-		height: 246px;
+		min-height: 246px;
+		padding: 15px 18px;
+	}
+	.trends-content {
+		padding: 9%;
+	}
+	.trends-hike a {
+		max-width: 215px;
 	}
 	.item-title a {
 		font-size: 1.062rem;
 		line-height: 1.29em;
 	}
 	.main {
-		width: 54%;
+		width: 53.6%;
 		margin-right: 30px;
+		margin-left: 20px;
 	}
 	.post {
 		margin-bottom: 61px;
+	}
+	.post:not(:last-child) {
+		margin-bottom: 64px;
 	}
 	.post-img img {
 		width: 100%;
 		object-fit: cover;
 	}
-	.post-content {
-		margin-top: 7px;
+	.post-img img:last-child {
+		margin-bottom: 6px;
 	}
 	.post-title a {
 		width: 100%;
@@ -106,11 +125,14 @@
 	.post-description + p {
 		margin-top: 14px;
 	}
+	.sidebar {
+		margin-right: 15px;
+	}
 	.products-section {
-		padding-top: 10px;
+		padding: 7px 0 31px;
 	}
 	.products {
-		margin-top: 28px;
+		margin: 28px 21px 0;
 		align-content: center;
 	}
 	.product-card:nth-child(odd) {
@@ -118,7 +140,10 @@
 	}
 	.product-card {
 		width: calc(50% - 10px);
-		margin-bottom: 20px;
+		margin-bottom: 28px;
+	}
+	.product-card:last-child .card-body {
+		height: 247px;
 	}
 }
 
@@ -141,6 +166,9 @@
 		background-image: url('../images/banner-mobile.jpg');
 		padding-bottom: 84px;
 	}
+	.burger {
+		margin: -11px 0 0 0;
+	}
 	.nav {
 		position: relative;
 	}
@@ -148,12 +176,12 @@
 		width: 269px;
 		height: 61px;
 		position: absolute;
-		top: 230px;
+		top: 225px;
 		left: 50%;
 		transform: translate(-50%);
 	}
 	.header-content {
-		margin-top: 154px;
+		margin-top: 150px;
 	}
 	.header-title {
 		font-size: 1.625rem;
@@ -169,21 +197,16 @@
 		margin-top: 22px;
 	}
 	.trends-card:nth-child(odd), .trends-card:nth-child(even) {
+		padding: 15px;
 		margin: 0 0 4px 0;
 		width: 100%;
-		height: 230px;
+		min-height: 230px;
 	}
-	.trends-garden .trends-content {
-		padding: 7% 5%;
-	}
-	.trends-garden a {
-		max-width: 215px;
-	}
-	.trends-cheese .trends-content {
-	    padding: 7% 5% 8% 4%;
+	.trends-content {
+		padding: 8% 6%;
 	}
 	.trends-hike .trends-content {
-	    padding: 7% 7% 7% 5%;
+		padding: 8% 7.5% 8% 6%;
 	}
 	.item-title a {
 		font-size: 1rem;
@@ -194,7 +217,10 @@
 		align-items: center;
 	}	
 	.post {
-		margin-bottom: 53px;
+		margin-bottom: 55px;
+	}
+	.post:not(:last-child) {
+		margin-bottom: 51px;
 	}
 	.post::after {
 		content: '';
@@ -205,7 +231,7 @@
 		background-color: #eee;
 	}
 	.post-img img {
-		width: 100%;
+		width: 97%;
 		max-height: 254px;
 		object-fit: cover;
 	}
@@ -213,27 +239,34 @@
 		margin-top: 6px;
 	}
 	.post-title a {
-    	margin-bottom: 14px;
+    	margin-bottom: 15px;
+	}
+	.post-description {
+		width: 98%;
 	}
 	.description-text {
     	margin-top: 13px;
     	font-size: 0.875rem;
 	}
 	.description-text + p {
-    	margin-top: 19px;
+    	margin-top: 2px;
 	}
 	.sidebar {
 		width: 100%;
 	}
 	.latest-posts {
-		width: 280px;
+		width: 330px;
 		margin: 0 auto 60px;
+		margin-left: -2px;
 	}
 	.new-posts {
 		margin: 0 auto 28px;
 	}
+	.preview-title a {
+		width: 245px;
+	}
 	.search {
-		margin-bottom: 39px;
+		margin-bottom: 34px;
 	}
 	.subscribe {
 		margin-bottom: 40px;
@@ -255,10 +288,7 @@
 		margin-bottom: 26px;
 	}
 	.card-body {
-		height: 240px;
-	}
-	.product-title {
-		font-size: 1.062rem;
+		padding: 47px 23px 0px 16px;
 	}
 	.card-footer {
 		margin-bottom: 28px;
